syntax = "proto3";

option go_package = "./proto";

package proto;

service MinerService {
    rpc Mine(MinerConfig) returns (MinerResources);
}

message NoParam{};

message MinerConfigEquipment{
    string type = 1;
    string name = 2;
    map<string, string> attributes = 3;
}

message MinerConfig{
    map<string, string> auth = 1;
    repeated MinerConfigEquipment equipments = 2;
}

message MinerPropertyLabel{
    string name = 1;
    bool unique = 2;
}

message MinerPropertyContent{
    string format = 1;
    string value = 2;
}

message MinerProperty{
    string type = 1;
    MinerPropertyLabel label = 2;
    MinerPropertyContent content = 3;
}

message MinerResource{
    string identifier = 1;
    string alias = 2;
    repeated MinerProperty properties = 3;
}

message MinerResources{
    repeated MinerResource resources = 1;
}

message TestResponse {
    string message = 1;
}
